# S21_brick_game

./: .gitattributes  .gitignore  Doxyfile  Makefile  gamepref.h  helper.c  main.c  main.h  test.c
.github/scripts/: telegram-notify.sh
.github/workflows/: bgamelib-ci.yml  ci-orchestration.yml  ci.yml  fsm-ci.yml
brick_game/: doxconf
brick_game/tetris/: gamepref.h  tetris.c  tetris.h
gui/cli/: graphic.c  graphic.h  splash.c  splash.h
src/app/: main_cli.c
src/brick_game/common/: Doxyfile  Makefile  README.md  s21_bgame.c  s21_bgame.h  s21_bgame_cmn.c  s21_bgame_cmn.h  s21_bgame_test.h
src/brick_game/common/tests/: test_bgame.c  test_brickgame_common.c
src/brick_game/snake/: Doxyfile  Makefile  README.md  s21_snake.cpp  s21_snake.h  s21_snake_internals.cpp  s21_snake_internals.hpp
src/brick_game/snake/tests/: test_snake.cpp
src/brick_game/tetris/: Doxyfile  Makefile  README.md  s21_tetris.c  s21_tetris.h  s21_tetris_internals.c  s21_tetris_internals.h  s21_tetris_pieces.c
src/brick_game/tetris/misc/: dependencies.dot
src/brick_game/tetris/tests/: test_tetris.c
src/fsm/: CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md  fsm.c  fsm.h  s21_fsm.c  s21_fsm.h
src/fsm/cmake/: patch_doxyfile.cmake
src/fsm/tests/: test_fsm.c
src/gui/cli/: cli.c  cli.h
src/gui/common/: view.h
src/gui/desktop/: qt_view.cpp  qt_view.hpp
tests/: suite_gamecreate.c  test_main.c  test_suitcases.h
